# paper-search-cli

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
claude-skill/: paper-search.md
paper_search/: __init__.py  cli.py  config.py  engine.py  paper.py
paper_search/academic_platforms/: acm.py  arxiv.py  base_search.py  chemrxiv.py  citeseerx.py  core.py  crossref.py  dblp.py  doaj.py  europepmc.py  hal.py  ieee.py  oaipmh.py  openaire.py  openalex.py  pmc.py  pubmed.py  ssrn.py  unpaywall.py  zenodo.py
tests/: conftest.py  e2e_test.py  functional_test.py  test.pubmed.py  test_acm.py  test_arxiv.py  test_base.py  test_biorxiv.py  test_citeseerx.py  test_config_env.py  test_crossref.py  test_dblp.py  test_doaj.py  test_fallback.py  test_google_scholar.py  test_hal.py  test_iacr.py  test_ieee.py  test_medrxiv.py  test_openaire.py  test_sci_hub.py  test_semantic.py  test_server.py  test_ssrn.py  test_unpaywall.py  test_unpaywall_source.py  test_zenodo.py
