[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-search-cli"
version = "1.0.2"
authors = [
  { name = "P.S Zhang", email = "pengsongzhang96@gmail.com" },
]
description = "CLI tool for searching and downloading academic papers from 20+ sources."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["cli", "academic", "papers", "search", "arxiv", "pubmed", "semantic-scholar", "claude-skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Environment :: Console",
]
dependencies = [
    "requests",
    "feedparser",
    "PyPDF2>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "httpx[socks]>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/openags/paper-search-cli"
Repository = "https://github.com/openags/paper-search-cli"
Issues = "https://github.com/openags/paper-search-cli/issues"

[project.scripts]
paper-search = "paper_search.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["paper_search"]
